--- a/gitdoc/template.html
+++ b/gitdoc/template.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>{title}</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
+    <script src="bootstrap.min.js"></script>
     <style>
         html {
             margin: 0;
